--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "esbuild": "^0.27.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
