--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -33,5 +33,6 @@ build/
 .vscode/
 
 ### Environment Variables & Sensitive Files ###
-application-local.properties
+src/main/resources/application_local.properties
+
 
