Fix config: rename local properties file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,4 @@ logging.level.com.languagelearning=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.SQL=DEBUG
 
+spring.profiles.active=local
